@@ -340,6 +340,7 @@ MHRM.mixed <- function(pars, constrain, PrepList, list, mixedlist, debug)
             ind1 <- ind2 + 1            
         }         
     }    
+    info <- nameInfoMatrix(info=info, correction=correction, L=L, npars=length(longpars))
     ret <- list(pars=pars, cycles = cycles - BURNIN - SEMCYCLES, info=as.matrix(info), 
                 longpars=longpars, converge=converge)
     ret    
