@@ -1,3 +1,5 @@
+* wald() will now support information matricies that contain constrained parameters
+
 * confmirt.model() can accept a string inputs, which may be useful for knitr/sweave documents
   since the scan() function tends to hang
 
